--- a/coloring/templates/coloring/index.html
+++ b/coloring/templates/coloring/index.html
@@ -39,9 +39,12 @@
 			flex-wrap: wrap; 
 			position: absolute;
 			top: 0;
+      right: 100;
       
 		}
-
+    p{
+      font-size: 12px;
+    }
   	.currentCopyColor {
 			width: 32px;
 			height: 32px;
@@ -50,7 +53,21 @@
 			border-radius: 16px;
 			margin: 3px;
 		}
-
+    .tooltip-wrap {
+      position: relative;
+    }
+    .tooltip-wrap .tooltip-content {
+      display: none;
+      position: absolute;
+      bottom: 5%;
+      left: -500;
+      right: 5%;
+      background-color: #a9b8b8;
+      padding: .2em;
+    }
+    .tooltip-wrap:hover .tooltip-content {
+      display: block;
+    }
     .sidePanel a {
     padding: 8px 8px 8px 32px;
     text-decoration: none;
@@ -87,15 +104,15 @@
 		}
 
     .sidePanel {
-      height: 750px; /* Specify a height */
-      width: 0px; /* 0 width - change this with JavaScript */
-      position: fixed; /* Stay in place */
-      z-index: 1; /* Stay on top */
+      height: 750px; 
+      width: 0px; 
+      position: fixed; 
+      z-index: 1; 
       top: 0;
       right: 0;
-      background-color: #f1f1f1; /* Black*/
-      overflow-x: hidden; /* Disable horizontal scroll */
-      padding-top: 60px; /* Place content 60px from the top */
+      background-color: #f1f1f1; 
+      overflow-x: hidden; 
+      padding-top: 60px;
     }
     
     button{
@@ -110,12 +127,37 @@
     .copy:hover{
       background-color: lightblue;
     }
+
+		#curr-color-icon {
+      width: 50px;
+      height: 50px;
+      border-radius: 50%;
+      position: absolute;
+      top: 20px;
+      left: 100px;
+		}
+
+		.currColorSwatch {
+			width: 32px;
+			height: 32px;
+			-moz-border-radius: 16px;
+			-webkit-border-radius: 16px;
+			border-radius: 16px;
+			margin: 3px;
+		}
+
+  
 	</style>
 
 	<script type="text/javascript" canvas="canvas">
+    var tool,copy;
 		window.onload = function() {
-			var canvas = document.getElementById('myCanvas');
 
+      
+			var canvas = document.getElementById('myCanvas');
+      copy = new paper.Tool();
+      tool = new paper.Tool();
+      tool.activate();
 			// coloring page
 			var mandala = {
 				item: null,
@@ -138,49 +180,67 @@
 			}
 
 
-      var tool = new paper.Tool();
-			function myCustomInteraction() {
-        
-				tool.onMouseDown = function (event) {
-				    var hit = mandala.item.hitTest(event.point, { tolerance: 10, fill: true });
-				    if (hit) {
-				    		// Color pallette keeps track of the full history of colors, though we
-				    		// only color in with the most-recent color.
-				        hit.item.fillColor = cp.history[cp.history.length - 1];
-				    }
-				}
-        
-      function copyMode(){
-        $("#color-palette").hide();
 
-        console.log("switching to copy mode");
-        tool.onMouseDown = function(event){
+      copy.onMouseDown = function(event){
+          console.log("switching to copy mode");
           console.log("copy tool mouse down");
-          var raster = mandala.item.rasterize();
-          var hit = raster.hitTest(event.point, { tolerance: 10, fill: true });
+
+          var hit = mandala.item.hitTest(event.point, { tolerance: 10, fill: true });
           if (hit){
-            console.log("hit")
-            console.log(hit.color);
-            console.log(hit.color._components);
-            console.log(hit.color._components.map(f=>Math.round(f*255)));
-            var colorVal = hit.color._components.map(f=>Math.round(f*255))
+
+            console.log(hit.item.fillColor);
+            console.log(hit.item.fillColor._components.map(f=>Math.round(f*255)));
+            var colorVal = hit.item.fillColor._components.map(f=>Math.round(f*255))
 
             var hexColor = rgbToHex(colorVal[0], colorVal[1], colorVal[2])
             console.log(hexColor);
 
 
             if(hexColor != "#ffffff"){
-              // var $copied = $("<div>").css("background-color", hexColor)
-              //         .addClass("currentCopyColor");
 
-              // copy_cp.$container.append($copied);
-              var $copied = $("<div>").css("background-color", hexColor)
-                      .addClass("currentCopyColor");
+              var $copied = $("<div>").css("background-color", hexColor).addClass("currentCopyColor");
+                  $copied.click(function(){
+                    console.log("Pushing color");
+						    // add color to the color palette history
+					  	    cp.history.push($(this).css("background-color"));
+                  $(".curr-color-icon").css("background", $(this).css("background-color"));
+					    });
+             copy_cp.$container.append($copied);
 
-              cp.$container.append($copied);
-            }
+
+
           }
         }
+      }
+			tool.onMouseDown = function (event) {
+            console.log("tool mouse down");
+				    var hit = mandala.item.hitTest(event.point, { tolerance: 10, fill: true });
+        document.getElementById("curr-color-icon").style.background = cp.history[cp.history.length - 1];
+				    if (hit) {
+				    		// Color pallette keeps track of the full history of colors, though we
+				    		// only color in with the most-recent color.
+                console.log(cp.history[cp.history.length - 1]);
+				        hit.item.fillColor = cp.history[cp.history.length - 1];
+                $(".curr-color-icon").css("background", cp.history[cp.history.length - 1]);
+                        
+				    }
+				}
+        
+        
+      document.getElementById("copy").onclick = function(){
+        copy.activate();
+         $("#color-palette").hide();
+         $("#copy-mode-color-palette").show();
+        document.getElementById("curr-color-icon").style.background = "#ffffff";
+
+
+      }
+                    
+      document.getElementById("copyFill").onclick = function(){
+        tool.activate();
+         $("#color-palette").hide();
+         $("#copy-mode-color-palette").show();
+          document.getElementById("curr-color-icon").style.background = cp.history[cp.history.length - 1];
 
       }
 
@@ -193,14 +253,8 @@
         return "#" + componentToHex(r) + componentToHex(g) + componentToHex(b);
       }
 
-      document.getElementById("copy").onclick = copyMode;
-      //   var rHammer = new Hammer($(#(mandala.item.id))[0]);
-      //     rHammer.on("tap", function(event) {
-      //       this.hide();
-      //       console.log("Hi");
-      // });
-
-			}
+      
+      
 			// create a color palette with the given colors
 			function createColorPalette(colors){
 
@@ -214,6 +268,9 @@
 					});
 					cp.$container.append($swatch);
 				}
+
+
+        
         $("#color-palette").hide();
 			}
 			// loads a set of colors from a json to create a color palette
@@ -228,39 +285,30 @@
 				});
 			}
 
-			function init(custom){
-				paper.setup(canvas);
+	
+
+      paper.setup(canvas);
 				getColorsCreatePalette();
 
 				paper.project.importSVG(mandala.filePath, function(item) {
 					mandala.item = item._children["design-freepik"];
 				    paper.project.insertLayer(0,mandala.item);
 
-				    if (custom) {
-				    	myCustomInteraction();
-				    } else {
-				    	myGradientInteraction();
-				    }
-
 				});
-			}
 
-
-
-      
-			init(true);
-		}
-      
-
+    }
     function displayPalette(){
         var x = document.getElementById("color-palette");
-
+        tool.activate();
+        $("#copy-mode-color-palette").hide();
+        //$("#color-palette").show();
         if(x.style.display == "none"){
           x.style.display = "block";
         } else {
           x.style.display = "none";
         }
     }
+    
 
     function copyColor(){
 
@@ -272,7 +320,9 @@
 
     }
 
-
+    function hidePop(event) {
+      $(".tooltip-content").hide();
+    }
     function openNav() {
         document.getElementById("control-panel").style.width = "105px";
         $(".openbtn").hide();
@@ -287,36 +337,53 @@
 
 	<canvas id="myCanvas" width="750px" height="750px"></canvas>
 	<div id="color-palette"></div>
+  <div id ="copy-mode-color-palette"></div>
+  <div id ="curr-color-icon"></div>
+  
   <div id="control-panel" class = "sidePanel">
+    
     <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
-    <button class="copy" id="copy"><a> <svg xmlns="http://www.w3.org/2000/svg" width="45" height="45" fill="currentColor" class="bi bi-eyedropper" viewBox="0 0 16 16">
-      <path d="M13.354.646a1.207 1.207 0 0 0-1.708 0L8.5 3.793l-.646-.647a.5.5 0 1 0-.708.708L8.293 5l-7.147 7.146A.5.5 0 0 0 1 12.5v1.793l-.854.853a.5.5 0 1 0 .708.707L1.707 15H3.5a.5.5 0 0 0 .354-.146L11 7.707l1.146 1.147a.5.5 0 0 0 .708-.708l-.647-.646 3.147-3.146a1.207 1.207 0 0 0 0-1.708l-2-2zM2 12.707l7-7L10.293 7l-7 7H2v-1.293z"/>
-    </svg> 
-    </a></button>
-    <button class="btn"><a> <svg xmlns="http://www.w3.org/2000/svg" width="45" height="45" fill="currentColor" class="bi bi-paint-bucket" viewBox="0 0 16 16">
-  <path d="M6.192 2.78c-.458-.677-.927-1.248-1.35-1.643a2.972 2.972 0 0 0-.71-.515c-.217-.104-.56-.205-.882-.02-.367.213-.427.63-.43.896-.003.304.064.664.173 1.044.196.687.556 1.528 1.035 2.402L.752 8.22c-.277.277-.269.656-.218.918.055.283.187.593.36.903.348.627.92 1.361 1.626 2.068.707.707 1.441 1.278 2.068 1.626.31.173.62.305.903.36.262.05.64.059.918-.218l5.615-5.615c.118.257.092.512.05.939-.03.292-.068.665-.073 1.176v.123h.003a1 1 0 0 0 1.993 0H14v-.057a1.01 1.01 0 0 0-.004-.117c-.055-1.25-.7-2.738-1.86-3.494a4.322 4.322 0 0 0-.211-.434c-.349-.626-.92-1.36-1.627-2.067-.707-.707-1.441-1.279-2.068-1.627-.31-.172-.62-.304-.903-.36-.262-.05-.64-.058-.918.219l-.217.216zM4.16 1.867c.381.356.844.922 1.311 1.632l-.704.705c-.382-.727-.66-1.402-.813-1.938a3.283 3.283 0 0 1-.131-.673c.091.061.204.15.337.274zm.394 3.965c.54.852 1.107 1.567 1.607 2.033a.5.5 0 1 0 .682-.732c-.453-.422-1.017-1.136-1.564-2.027l1.088-1.088c.054.12.115.243.183.365.349.627.92 1.361 1.627 2.068.706.707 1.44 1.278 2.068 1.626.122.068.244.13.365.183l-4.861 4.862a.571.571 0 0 1-.068-.01c-.137-.027-.342-.104-.608-.252-.524-.292-1.186-.8-1.846-1.46-.66-.66-1.168-1.32-1.46-1.846-.147-.265-.225-.47-.251-.607a.573.573 0 0 1-.01-.068l3.048-3.047zm2.87-1.935a2.44 2.44 0 0 1-.241-.561c.135.033.324.11.562.241.524.292 1.186.8 1.846 1.46.45.45.83.901 1.118 1.31a3.497 3.497 0 0 0-1.066.091 11.27 11.27 0 0 1-.76-.694c-.66-.66-1.167-1.322-1.458-1.847z"/>
-    </svg> 
-    </a>
-  <button class="btn" onClick = "displayPalette()"><a> <svg xmlns="http://www.w3.org/2000/svg" width="45" height="45" fill="currentColor" class="bi bi-palette" viewBox="0 0 16 16">
-  <path d="M8 5a1.5 1.5 0 1 0 0-3 1.5 1.5 0 0 0 0 3zm4 3a1.5 1.5 0 1 0 0-3 1.5 1.5 0 0 0 0 3zM5.5 7a1.5 1.5 0 1 1-3 0 1.5 1.5 0 0 1 3 0zm.5 6a1.5 1.5 0 1 0 0-3 1.5 1.5 0 0 0 0 3z"/>
-  <path d="M16 8c0 3.15-1.866 2.585-3.567 2.07C11.42 9.763 10.465 9.473 10 10c-.603.683-.475 1.819-.351 2.92C9.826 14.495 9.996 16 8 16a8 8 0 1 1 8-8zm-8 7c.611 0 .654-.171.655-.176.078-.146.124-.464.07-1.119-.014-.168-.037-.37-.061-.591-.052-.464-.112-1.005-.118-1.462-.01-.707.083-1.61.704-2.314.369-.417.845-.578 1.272-.618.404-.038.812.026 1.16.104.343.077.702.186 1.025.284l.028.008c.346.105.658.199.953.266.653.148.904.083.991.024C14.717 9.38 15 9.161 15 8a7 7 0 1 0-7 7z"/>
-  </svg> </button> </a>
-
-  <button class="btn"><a><svg xmlns="http://www.w3.org/2000/svg" width="45" height="45" fill="currentColor" class="bi bi-arrow-counterclockwise" viewBox="0 0 16 16">
-  <path fill-rule="evenodd" d="M8 3a5 5 0 1 1-4.546 2.914.5.5 0 0 0-.908-.417A6 6 0 1 0 8 2v1z"/>
-  <path d="M8 4.466V.534a.25.25 0 0 0-.41-.192L5.23 2.308a.25.25 0 0 0 0 .384l2.36 1.966A.25.25 0 0 0 8 4.466z"/>
-</svg></a></button>
 
 <button class="btn"><a><svg xmlns="http://www.w3.org/2000/svg" width="45" height="45" fill="currentColor" class="bi bi-arrow-left" viewBox="0 0 16 16">
   <path fill-rule="evenodd" d="M15 8a.5.5 0 0 0-.5-.5H2.707l3.147-3.146a.5.5 0 1 0-.708-.708l-4 4a.5.5 0 0 0 0 .708l4 4a.5.5 0 0 0 .708-.708L2.707 8.5H14.5A.5.5 0 0 0 15 8z"/>
 </svg></a></button>
 
+      <button class="btn" onClick = "displayPalette()"><a> <svg xmlns="http://www.w3.org/2000/svg" width="45" height="45" fill="currentColor" class="bi bi-palette" viewBox="0 0 16 16">
+  <path d="M8 5a1.5 1.5 0 1 0 0-3 1.5 1.5 0 0 0 0 3zm4 3a1.5 1.5 0 1 0 0-3 1.5 1.5 0 0 0 0 3zM5.5 7a1.5 1.5 0 1 1-3 0 1.5 1.5 0 0 1 3 0zm.5 6a1.5 1.5 0 1 0 0-3 1.5 1.5 0 0 0 0 3z"/>
+  <path d="M16 8c0 3.15-1.866 2.585-3.567 2.07C11.42 9.763 10.465 9.473 10 10c-.603.683-.475 1.819-.351 2.92C9.826 14.495 9.996 16 8 16a8 8 0 1 1 8-8zm-8 7c.611 0 .654-.171.655-.176.078-.146.124-.464.07-1.119-.014-.168-.037-.37-.061-.591-.052-.464-.112-1.005-.118-1.462-.01-.707.083-1.61.704-2.314.369-.417.845-.578 1.272-.618.404-.038.812.026 1.16.104.343.077.702.186 1.025.284l.028.008c.346.105.658.199.953.266.653.148.904.083.991.024C14.717 9.38 15 9.161 15 8a7 7 0 1 0-7 7z"/>
+  </svg> </button> </a>
+    
+    <div class = "tooltip-wrap">
+    <button class="copy" id="copy" onClick = "copy.activate();"><a> <svg xmlns="http://www.w3.org/2000/svg" width="45" height="45" fill="currentColor" class="bi bi-eyedropper" viewBox="0 0 16 16">
+      <path d="M13.354.646a1.207 1.207 0 0 0-1.708 0L8.5 3.793l-.646-.647a.5.5 0 1 0-.708.708L8.293 5l-7.147 7.146A.5.5 0 0 0 1 12.5v1.793l-.854.853a.5.5 0 1 0 .708.707L1.707 15H3.5a.5.5 0 0 0 .354-.146L11 7.707l1.146 1.147a.5.5 0 0 0 .708-.708l-.647-.646 3.147-3.146a1.207 1.207 0 0 0 0-1.708l-2-2zM2 12.707l7-7L10.293 7l-7 7H2v-1.293z"/>
+    </svg> 
+    </a></button> 
+    <div class="tooltip-content" onClick = "hidePop();">
+    <p>Double-click to enter copy mode!</p>
+  </div>
+    </div>
+    <div class = "tooltip-wrap">
+    <button class="btn" id="copyFill" onclick = "tool.activate();"><a> <svg xmlns="http://www.w3.org/2000/svg" width="45" height="45" fill="currentColor" class="bi bi-paint-bucket" viewBox="0 0 16 16">
+  <path d="M6.192 2.78c-.458-.677-.927-1.248-1.35-1.643a2.972 2.972 0 0 0-.71-.515c-.217-.104-.56-.205-.882-.02-.367.213-.427.63-.43.896-.003.304.064.664.173 1.044.196.687.556 1.528 1.035 2.402L.752 8.22c-.277.277-.269.656-.218.918.055.283.187.593.36.903.348.627.92 1.361 1.626 2.068.707.707 1.441 1.278 2.068 1.626.31.173.62.305.903.36.262.05.64.059.918-.218l5.615-5.615c.118.257.092.512.05.939-.03.292-.068.665-.073 1.176v.123h.003a1 1 0 0 0 1.993 0H14v-.057a1.01 1.01 0 0 0-.004-.117c-.055-1.25-.7-2.738-1.86-3.494a4.322 4.322 0 0 0-.211-.434c-.349-.626-.92-1.36-1.627-2.067-.707-.707-1.441-1.279-2.068-1.627-.31-.172-.62-.304-.903-.36-.262-.05-.64-.058-.918.219l-.217.216zM4.16 1.867c.381.356.844.922 1.311 1.632l-.704.705c-.382-.727-.66-1.402-.813-1.938a3.283 3.283 0 0 1-.131-.673c.091.061.204.15.337.274zm.394 3.965c.54.852 1.107 1.567 1.607 2.033a.5.5 0 1 0 .682-.732c-.453-.422-1.017-1.136-1.564-2.027l1.088-1.088c.054.12.115.243.183.365.349.627.92 1.361 1.627 2.068.706.707 1.44 1.278 2.068 1.626.122.068.244.13.365.183l-4.861 4.862a.571.571 0 0 1-.068-.01c-.137-.027-.342-.104-.608-.252-.524-.292-1.186-.8-1.846-1.46-.66-.66-1.168-1.32-1.46-1.846-.147-.265-.225-.47-.251-.607a.573.573 0 0 1-.01-.068l3.048-3.047zm2.87-1.935a2.44 2.44 0 0 1-.241-.561c.135.033.324.11.562.241.524.292 1.186.8 1.846 1.46.45.45.83.901 1.118 1.31a3.497 3.497 0 0 0-1.066.091 11.27 11.27 0 0 1-.76-.694c-.66-.66-1.167-1.322-1.458-1.847z"/>
+    </svg> 
+    </a></button>
+      <div class="tooltip-content" onClick = "hidePop();">
+    <p>Double-click to enter fill mode!</p>
+  </div>
+</div>
+
+<button class="btn"><a><svg xmlns="http://www.w3.org/2000/svg" width="45" height="45" fill="currentColor" class="bi bi-pencil" viewBox="0 0 16 16">
+  <path d="M12.146.146a.5.5 0 0 1 .708 0l3 3a.5.5 0 0 1 0 .708l-10 10a.5.5 0 0 1-.168.11l-5 2a.5.5 0 0 1-.65-.65l2-5a.5.5 0 0 1 .11-.168l10-10zM11.207 2.5 13.5 4.793 14.793 3.5 12.5 1.207 11.207 2.5zm1.586 3L10.5 3.207 4 9.707V10h.5a.5.5 0 0 1 .5.5v.5h.5a.5.5 0 0 1 .5.5v.5h.293l6.5-6.5zm-9.761 5.175-.106.106-1.528 3.821 3.821-1.528.106-.106A.5.5 0 0 1 5 12.5V12h-.5a.5.5 0 0 1-.5-.5V11h-.5a.5.5 0 0 1-.468-.325z"/>
+</svg></a></button>
+    
 <button class="btn"><a><svg xmlns="http://www.w3.org/2000/svg" width="45" height="45" fill="currentColor" class="bi bi-eraser-fill" viewBox="0 0 16 16">
   <path d="M8.086 2.207a2 2 0 0 1 2.828 0l3.879 3.879a2 2 0 0 1 0 2.828l-5.5 5.5A2 2 0 0 1 7.879 15H5.12a2 2 0 0 1-1.414-.586l-2.5-2.5a2 2 0 0 1 0-2.828l6.879-6.879zm.66 11.34L3.453 8.254 1.914 9.793a1 1 0 0 0 0 1.414l2.5 2.5a1 1 0 0 0 .707.293H7.88a1 1 0 0 0 .707-.293l.16-.16z"/>
 </svg></a></button>
 
-<button class="btn"><a><svg xmlns="http://www.w3.org/2000/svg" width="45" height="45" fill="currentColor" class="bi bi-pencil" viewBox="0 0 16 16">
-  <path d="M12.146.146a.5.5 0 0 1 .708 0l3 3a.5.5 0 0 1 0 .708l-10 10a.5.5 0 0 1-.168.11l-5 2a.5.5 0 0 1-.65-.65l2-5a.5.5 0 0 1 .11-.168l10-10zM11.207 2.5 13.5 4.793 14.793 3.5 12.5 1.207 11.207 2.5zm1.586 3L10.5 3.207 4 9.707V10h.5a.5.5 0 0 1 .5.5v.5h.5a.5.5 0 0 1 .5.5v.5h.293l6.5-6.5zm-9.761 5.175-.106.106-1.528 3.821 3.821-1.528.106-.106A.5.5 0 0 1 5 12.5V12h-.5a.5.5 0 0 1-.5-.5V11h-.5a.5.5 0 0 1-.468-.325z"/>
+
+      <button class="btn"><a><svg xmlns="http://www.w3.org/2000/svg" width="45" height="45" fill="currentColor" class="bi bi-arrow-counterclockwise" viewBox="0 0 16 16">
+  <path fill-rule="evenodd" d="M8 3a5 5 0 1 1-4.546 2.914.5.5 0 0 0-.908-.417A6 6 0 1 0 8 2v1z"/>
+  <path d="M8 4.466V.534a.25.25 0 0 0-.41-.192L5.23 2.308a.25.25 0 0 0 0 .384l2.36 1.966A.25.25 0 0 0 8 4.466z"/>
 </svg></a></button>
   
 
